--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".MachineDefinition" />
+        <activity android:name=".MachineNumbers" />
+        <activity android:name=".MachineOperations"/>
+     </application>
 
 </manifest>
